implemented get fetch

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <script type="text/javascript" src="src/index.js"></script>
   </head>
   <body>
+    <div id="sneaker-container">
+      
 
+    </div>
   </body>
 </html>
