added image for Sneaker Search, changed styling in index.css, removed view button for renderSneakerCard within sneaker.js

--- a/index.html
+++ b/index.html
@@ -2,14 +2,16 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Sneaker Search</title>
     <script type="text/javascript" src="src/sneaker.js"></script>
     <script type="text/javascript" src="src/index.js"></script>
+    <link href="index.css" rel="stylesheet">
+    <IMG SRC="./image/LogoMakr_36FSGP" ALT="Sneaker Search" WIDTH=600 HEIGHT=400> 
   </head>
   <body>
 
     <div class="form-container">
-
+      <!-- <form id="create-sneaker-form" style=""> -->
       <form id="create-sneaker-form" style="">
         <h3>Catalog Your Sneakers!</h3>
     
