--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script type="text/javascript" src="src/sneaker.js"></script>
     <script type="text/javascript" src="src/index.js"></script>
     <link href="index.css" rel="stylesheet">
-    <IMG SRC="./image/LogoMakr_36FSGP" ALT="Sneaker Search" WIDTH=600 HEIGHT=400> 
+    <img src="src/image/LogoMakr_36FSGP.png" alt="Sneaker Search" width=600 height=400> 
   </head>
   <body>
 
