--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script type="text/javascript" src="src/index.js"></script>
     <link href="index.css" rel="stylesheet">
     <img src="src/image/LogoMakr_36FSGP.png" alt="Sneaker Search" width=600 height=400> 
+    <p>Sneaker Search is a sneaker catalog application , where the user can create a sneaker object that allows the user to submit a form and include the sneaker name, description of the sneaker, sneaker image, and sneaker category name ranging from Basketball, Running, and Lifestyle sneakers.</p>
   </head>
   <body>
 
