updated message when creating new sneaker

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <p>Sneaker Search is a sneaker catalog application , where the user can create a sneaker object that allows the user to submit a form and include the sneaker name, description of the sneaker, sneaker image, and sneaker category name ranging from Basketball, Running, and Lifestyle sneakers.</p>
   </head>
   <body>
-
+    <div id='create-message'></div>
     <div class="form-container">
       <!-- <form id="create-sneaker-form" style=""> -->
       <form id="create-sneaker-form" style="">
