removed margin-right fron body and added option for selecting sneaker category

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
       background-image: url("src/image/LogoMakr_36FSGP.png");
       background-repeat: repeat;
       background-position: center;
-      margin-right: 200px;
       background-attachment: fixed;
     }
   </style>
@@ -41,6 +40,7 @@
     
         <p>Select the appropiate Sneaker Category</p>
         <select id="categories" name="categories">
+          <option value=0>--Select Category--</option>
           <option value=1>Basketball</option>
           <option value=2>Lifestyle</option>
           <option value=3>Running</option>
