--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <label>Select the appropiate Sneaker Category</label>
         <br><br>
         <select id="categories" name="categories">
-          <option value=0>--Select Category--</option>
+          <option value="">--Select Category--</option>
           <option value=1>Basketball</option>
           <option value=2>Lifestyle</option>
           <option value=3>Running</option>
